kubernetes/ci/cache-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-server
  namespace: ci
  labels:
    app.kubernetes.io/name: cache-server
    app.kubernetes.io/instance: cache-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cache-server
    app.kubernetes.io/instance: cache-server
  ports:
    - name: http
      port: 3000
      targetPort: http
