kubernetes/ci/cache-server-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cache-server
  namespace: ci
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cache-server
      app.kubernetes.io/instance: cache-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: arc-runners
            app.kubernetes.io/part-of: gha-runner-scale-set
            app.kubernetes.io/component: runner
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
            - port: "9153"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: garage
            app.kubernetes.io/name: garage
            app.kubernetes.io/instance: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "token.actions.githubusercontent.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
